# Settings4000

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install.sh
.claude/agents/: rust-code-reviewer.md  rust-gtk-developer.md
.githooks/: pre-commit
.github/workflows/: ci.yml
data/: org.settings4000.Settings4000.desktop
docs/: architecture.md  benchmarks.md  dotfiles_analysis.md  logging_audit.md  requirements.md  tasks.md
examples/: logging_walkthrough.rs
src/: lib.rs  main.rs  testing.rs
src/core/: apply.rs  detect.rs  display.rs  freshness.rs  input.rs  mod.rs  model.rs  network.rs  notifications.rs  power.rs  reload.rs  sound.rs  store.rs  theme.rs
src/parsers/: env.rs  generated.rs  hyprlang.rs  ini.rs  mod.rs  monitors.rs  palette.rs  swaync.rs
src/system/: command.rs  logging.rs  mod.rs  signal.rs  writer.rs
src/ui/: app.rs  category.rs  chrome.rs  display.rs  input.rs  mod.rs  network.rs  notifications.rs  page.rs  row.rs  sound.rs  startup.rs  theme.rs  window.rs
tests/: apply_display.rs  apply_input.rs  apply_notifications.rs  apply_power.rs  apply_theme.rs  fixture_tree.rs  module_boundaries.rs  no_custom_css.rs
tests/fixtures/: README.md
tests/fixtures/dotfiles/colors/: README.md  everforest  nord
tests/fixtures/dotfiles/config/eww/: _colors.scss  _fonts.scss
tests/fixtures/dotfiles/config/gtk-3.0/: settings.ini
tests/fixtures/dotfiles/config/gtk-4.0/: settings.ini
tests/fixtures/dotfiles/config/hypr/: colors.conf  hyprland.conf  hyprlock.conf  hyprpaper.conf  input.conf  monitors.conf
tests/fixtures/dotfiles/config/kitty/: colors.conf  fonts.conf  kitty.conf
tests/fixtures/dotfiles/config/rofi/: colors.rasi  fonts.rasi
tests/fixtures/dotfiles/config/swaync/: colors.css  config.json  style.css
tests/fixtures/dotfiles/config/uwsm/: env
tests/fixtures/dotfiles/scripts/: generate-colors
tests/fixtures/dotfiles/theme/: fonts
tests/fixtures/dotfiles/zsh/: colors.zsh
