[package]
name = "settings4000"
version = "0.1.0"
edition = "2024"
# Minimum supported Rust version. The 2024 edition was stabilized in Rust 1.85,
# and all dependencies below are pinned to versions that build on 1.85.
rust-version = "1.85"
description = "Native GTK4 settings GUI for a dotfiles-managed Hyprland desktop"

[features]
# Compiles the crate's test-support surface — the fixture-dotfiles installer
# (`testing` module, task 7.1) and the mock seams (`MockCommandRunner`,
# `MockProcessSignaller`, `Capabilities::for_tests`) — into the library for
# consumers *outside* the crate. In-crate unit tests see that surface via
# `cfg(test)` regardless; integration tests in `tests/` compile as separate
# crates where `cfg(test)` does not apply to the library, so they get it through
# this feature via the self-referential dev-dependency below (R6.1). Never
# enabled for a release build.
testing = []

[dependencies]
# GUI toolkit. Relm4 provides the declarative, message-driven component
# framework; `gtk4` is the underlying binding. Both are pinned to the same 0.10
# series so only a single `gtk4` version is present in the tree (architecture
# §1). Only the `ui/` layer may use these — `core/` and `parsers/` must not
# (enforced by tests/module_boundaries.rs).
#
# The `v4_10` feature enables the GTK 4.10 API the Theme page's wallpaper picker
# relies on — `gtk::FileDialog` and `gtk::AlertDialog` (task 6.5). Their
# predecessors (`FileChooserNative`/`MessageDialog`) are deprecated in GTK 4.10+
# and would trip the `-D warnings` clippy gate, so the modern replacements are
# used instead; the target system ships GTK 4.22, well above the 4.10 baseline.
gtk4 = { version = "0.10.3", features = ["v4_10"] }
relm4 = "0.10.0"

# Command-line argument parsing (R7.2). Only the `--log-level` flag exists
# today, but clap's derive API gives typed parsing, value validation, and a
# generated `--help` for free, and scales cleanly as more flags appear. Used by
# `main.rs` and `system/` only — never by the GTK-free `core/`/`parsers/` layers.
clap = { version = "4.6.1", features = ["derive"] }

# Structured logging to the systemd journal, with a stderr formatting layer as
# fallback when journald is unavailable (R7.1). The `env-filter` feature enables
# `EnvFilter`, which drives the configurable log levels sourced from
# `SETTINGS4000_LOG`/`RUST_LOG` and the `--log-level` flag (R7.2).
tracing = "0.1.44"
tracing-journald = "0.3.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# JSON editing for `swaync/config.json`. `preserve_order` keeps object key
# order stable across a parse-modify-reserialize cycle so edits stay surgical
# (architecture §3, task 3.4).
serde_json = { version = "1.0.150", features = ["preserve_order"] }

# Direct signal delivery without a shell: the reload path sends SIGUSR1 to
# kitty PIDs via `nix::sys::signal::kill` (architecture §6, task 4.4). The
# `signal` feature also enables the `process` module it depends on.
nix = { version = "0.31.3", features = ["signal"] }

# Waiting on a child process with a deadline for the `CommandRunner` real
# implementation (architecture §6: every command runs with a 5 s timeout and is
# killed if it exceeds it — task 2.1). This crate wraps the OS primitives
# (`waitid`/self-pipe + `select` on Unix) to block efficiently until the child
# exits *or* the deadline elapses, which is race-free and avoids the CPU cost
# and added latency of a hand-rolled `try_wait` poll loop. It is a tiny,
# long-stable, single-purpose crate with no transitive dependencies beyond
# `libc`.
wait-timeout = "0.2.1"

# Atomic file writes (task 2.2). The file writer stages new content in a
# `NamedTempFile` created in the resolved target's own directory, fsyncs it, then
# atomically renames it over the target so a write is transactional and never
# leaves a partial config (R5.4). This was a dev-dependency while only tests used
# temporary directories, but `NamedTempFile` is now used in production code, so
# it must be a regular dependency (which also keeps it available to the tests
# that build fixture dotfiles trees, architecture §9).
tempfile = "3.27.0"

[dev-dependencies]
# The crate depends on itself with the `testing` feature enabled so that every
# test target (unit, integration, doc) gets the test-support surface — the
# fixture installer and mock seams — without release builds ever carrying it.
# This self-referential dev-dependency is the standard Cargo pattern for
# enabling a feature in tests only; it introduces no second copy of the crate.
settings4000 = { path = ".", features = ["testing"] }
